--- a/static/css/style.css
+++ b/static/css/style.css
@@ -215,7 +215,7 @@ h6 {
 /* line 24, C:/Users/HP/Desktop/July-HTML/287.Job_board/Job_board_Template/assets/scss/_common.scss */
 p {
   font-family: "Muli", sans-serif;
-  color: #10285d;
+  color: #031821;
   font-size: 16px;
   line-height: 30px;
   margin-bottom: 15px;
@@ -289,7 +289,7 @@ a {
 
 /* line 75, C:/Users/HP/Desktop/July-HTML/287.Job_board/Job_board_Template/assets/scss/_common.scss */
 a:hover {
-  color: #fff;
+  color: #90420b;
 }
 
 /* line 78, C:/Users/HP/Desktop/July-HTML/287.Job_board/Job_board_Template/assets/scss/_common.scss */
@@ -620,7 +620,7 @@ hr {
 /* line 351, C:/Users/HP/Desktop/July-HTML/287.Job_board/Job_board_Template/assets/scss/_common.scss */
 .border-btn {
   border: 1px solid #fff;
-  color: #fff;
+  color: #4c3500;
   background: none;
   border-radius: 30px;
   text-transform: normal;
@@ -3281,7 +3281,7 @@ hr {
 
 /* line 78, C:/Users/HP/Desktop/July-HTML/287.Job_board/Job_board_Template/assets/scss/_headerMenu.scss */
 .header-area .header-top .header-info-left .header-social > ul > li > a:hover {
-  color: #367FFF;
+  color: #D2691E;
 }
 
 /* line 89, C:/Users/HP/Desktop/July-HTML/287.Job_board/Job_board_Template/assets/scss/_headerMenu.scss */
@@ -3295,7 +3295,7 @@ hr {
 
 /* line 96, C:/Users/HP/Desktop/July-HTML/287.Job_board/Job_board_Template/assets/scss/_headerMenu.scss */
 .header-area .header-top .header-info-right .select-this .nice-select .option:hover, .header-area .header-top .header-info-right .select-this .nice-select .option.focus, .header-area .header-top .header-info-right .select-this .nice-select .option.selected.focus {
-  background-color: #367FFF;
+  background-color: #D2691E;
 }
 
 /* line 102, C:/Users/HP/Desktop/July-HTML/287.Job_board/Job_board_Template/assets/scss/_headerMenu.scss */
@@ -3321,12 +3321,14 @@ hr {
 /* line 125, C:/Users/HP/Desktop/July-HTML/287.Job_board/Job_board_Template/assets/scss/_headerMenu.scss */
 .header-area .header-bottom {
   padding: 0px 130px;
+  color: #C46B2B;
 }
 
 @media only screen and (min-width: 1200px) and (max-width: 1600px) {
   /* line 125, C:/Users/HP/Desktop/July-HTML/287.Job_board/Job_board_Template/assets/scss/_headerMenu.scss */
   .header-area .header-bottom {
     padding: 0px 30px;
+    color: #C46B2B;
   }
 }
 
@@ -3334,6 +3336,7 @@ hr {
   /* line 125, C:/Users/HP/Desktop/July-HTML/287.Job_board/Job_board_Template/assets/scss/_headerMenu.scss */
   .header-area .header-bottom {
     padding: 0px 15px;
+    color: #C46B2B;
   }
 }
 
@@ -3341,6 +3344,7 @@ hr {
   /* line 125, C:/Users/HP/Desktop/July-HTML/287.Job_board/Job_board_Template/assets/scss/_headerMenu.scss */
   .header-area .header-bottom {
     padding: 15px 50px;
+    color: #C46B2B;
   }
 }
 
@@ -3348,6 +3352,7 @@ hr {
   /* line 125, C:/Users/HP/Desktop/July-HTML/287.Job_board/Job_board_Template/assets/scss/_headerMenu.scss */
   .header-area .header-bottom {
     padding: 15px 20px;
+    color: #C46B2B;
   }
 }
 
@@ -3355,6 +3360,7 @@ hr {
   /* line 125, C:/Users/HP/Desktop/July-HTML/287.Job_board/Job_board_Template/assets/scss/_headerMenu.scss */
   .header-area .header-bottom {
     padding: 15px 0px;
+    color: #C46B2B;
   }
 }
 
@@ -3362,6 +3368,7 @@ hr {
 .main-header {
   position: relative;
   z-index: 3;
+  color: #C46B2B;
 }
 
 @media only screen and (min-width: 1200px) and (max-width: 1600px) {
@@ -3380,11 +3387,11 @@ hr {
 
 /* line 160, C:/Users/HP/Desktop/July-HTML/287.Job_board/Job_board_Template/assets/scss/_headerMenu.scss */
 .main-header .main-menu ul li a {
-  color: #fff;
+  color: #715005;
   font-weight: 600;
   padding: 39px 19px;
   display: block;
-  font-size: 16px;
+  font-size: 20px;
   -webkit-transition: 0.3s;
   -moz-transition: 0.3s;
   -o-transition: 0.3s;
@@ -3434,12 +3441,12 @@ hr {
 .main-header .main-menu ul ul.submenu > li > a {
   padding: 6px 10px !important;
   font-size: 16px;
-  color: #367FFF;
+  color: #D2691E;
 }
 
 /* line 199, C:/Users/HP/Desktop/July-HTML/287.Job_board/Job_board_Template/assets/scss/_headerMenu.scss */
 .main-header .main-menu ul ul.submenu > li > a:hover {
-  color: #367FFF;
+  color: #D2691E;
   background: none;
   padding-left: 13px !important;
 }
@@ -3462,7 +3469,7 @@ hr {
 
 /* line 230, C:/Users/HP/Desktop/July-HTML/287.Job_board/Job_board_Template/assets/scss/_headerMenu.scss */
 .header-sticky.sticky-bar {
-  background: #367FFF;
+  background: #C46B2B;
 }
 
 /* line 236, C:/Users/HP/Desktop/July-HTML/287.Job_board/Job_board_Template/assets/scss/_headerMenu.scss */
@@ -3523,7 +3530,7 @@ hr {
 /* line 275, C:/Users/HP/Desktop/July-HTML/287.Job_board/Job_board_Template/assets/scss/_headerMenu.scss */
 .mobile_menu .slicknav_menu .slicknav_nav a:hover {
   background: transparent;
-  color: #367FFF;
+  color: #D2691E;
 }
 
 /* line 279, C:/Users/HP/Desktop/July-HTML/287.Job_board/Job_board_Template/assets/scss/_headerMenu.scss */
@@ -3698,9 +3705,9 @@ hr {
 
 /* line 88, C:/Users/HP/Desktop/July-HTML/287.Job_board/Job_board_Template/assets/scss/_h1-hero.scss */
 .slider-area .hero__caption h1, .slider-area2 .hero__caption h1 {
-  font-size: 46px;
+  font-size: 75px;
   font-weight: 600;
-  color: #fff;
+  color: #8a0a0ae8;
   line-height: 1.3;
   margin-bottom: 8px;
 }
@@ -3733,7 +3740,7 @@ hr {
 @media (max-width: 575px) {
   /* line 88, C:/Users/HP/Desktop/July-HTML/287.Job_board/Job_board_Template/assets/scss/_h1-hero.scss */
   .slider-area .hero__caption h1, .slider-area2 .hero__caption h1 {
-    font-size: 28px;
+    font-size: 38px;
     line-height: 1.2;
     margin-bottom: 20px;
   }
@@ -3741,7 +3748,7 @@ hr {
 
 /* line 114, C:/Users/HP/Desktop/July-HTML/287.Job_board/Job_board_Template/assets/scss/_h1-hero.scss */
 .slider-area .hero__caption p, .slider-area2 .hero__caption p {
-  color: #fff;
+  color: #4c1717;
   font-size: 18px;
   margin-bottom: 49px;
 }
@@ -4159,7 +4166,7 @@ hr {
 
 /* line 399, C:/Users/HP/Desktop/July-HTML/287.Job_board/Job_board_Template/assets/scss/_h1-hero.scss */
 .slider-area .popular-search ul li p, .slider-area2 .popular-search ul li p {
-  color: #fff;
+  color: #230101;
 }
 
 /* line 402, C:/Users/HP/Desktop/July-HTML/287.Job_board/Job_board_Template/assets/scss/_h1-hero.scss */
