--- a/templates/index.html
+++ b/templates/index.html
@@ -63,7 +63,9 @@
                                                 <li><a href="#">Pages</a>
                                                     <ul class="submenu">
                                                         <li><a href="about">about</a></li>
-                                                        <li><a href="blog">Blog</a></li>
+                                                        <li><a href="frontpage">Blog</a></li>
+                                                        <li><a href="predict">predict</a>
+                                                        <li><a href="show">show</a>
                                                     </ul>
                                                 </li>
                                                 
@@ -396,7 +398,7 @@
                         <div class="col-xl-12 ">
                             <div class="footer-copy-right text-center">
                                 <p><!-- bottom line -->
-                                  <script>document.write(new Date().getFullYear());</script> This WebSite is a college project by <i class="fa fa-heart" aria-hidden="true"> Group number- 21</i></br>
+                                  <script>document.write(new Date().getFullYear());</script> This WebSite is a college project by <i class="fa fa-heart" aria-hidden="true"> Group number- 19</i></br>
                                   <!-- bottom fields --></p>
                               </div>
                           </div>
