--- a/templates/login.html
+++ b/templates/login.html
@@ -52,9 +52,13 @@
                 <a href="/"><img src="{% static 'img/logo/logo.png' %}" alt=""></a>
             </div>
             <h2>Login Here</h2>
+            {% if form.errors %}
+    <p>username or password not correct</p>
+     {% endif %}
             <div class="form-input">
                 <label for="name">Username</label>
                 <input  type="text" name="name" placeholder="username">
+                
             </div>
             <div class="form-input">
                 <label for="name">Password</label>
