--- a/templates/post.html
+++ b/templates/post.html
@@ -64,7 +64,7 @@
                                                   <li><a href="#">Pages</a>
                                                       <ul class="submenu">
                                                           <li><a href="about">about</a></li>
-                                                          <li><a href="blog">Blog</a></li>
+                                                          <li><a href="frontpage">Blog</a></li>
                                                       </ul>
                                                   </li>
                                                   <!-- <li><a href="login">Log in</a></li> -->
@@ -106,7 +106,7 @@
           </div>
           <!--Hero Area End-->
           <!--? Blog Area Start-->
-          <section class="blog_area section-padding">
+          <section class="blog_area section-padding"height="500px">
               <div class="container">
                   <div class="row">
                       <div class="col-lg-8 mb-5 mb-lg-0">
@@ -117,11 +117,13 @@
                                 <div class="login-form">
                                     <!-- logo-login -->
                                     <div class="form-input">
-                                        <label for="name">Full name</label>
+                                        <label for="name">Job Provider Name</label>
                                         <input  type="text" name="name" placeholder="Full name">
                                     </div>
                                 <div>
-                                    <label for="img">Select image:</label>
+                                    
+
+                                    <label for="img">Select job image:</label>
                                     <input type="file" id="img" name="img" accept="image/*">
                                 </div>
                                     <!-- <div class="form-input">
@@ -132,11 +134,33 @@
                                         <label for="name">Password</label>
                                         <input type="password" name="password" placeholder="Password">
                                     </div> -->
-                                    <textarea name="desc" id="" cols="30" rows="10"></textarea>
+                                    
+                                    JOb Discription:<textarea name="desc" id="" cols="8" rows="2"></textarea>
                                     <div class="form-input">
-                                        <label for="name">price</label>
+                                        <br> <label for="location">Choose a skill:</label>  <br>
+                                        <select name="skill" id="location">
+                                            <option >carPainting</option>
+                                            <option >plumbering</option>
+                                            <option >Delivery Services</option>
+                                            <option >Designing</option>
+                                            <option >Electric</option>
+                                            <option >Gardening</option>
+                                            <option >Wall Painting</option>
+                                        </select> 
+                                    </div><br>
+                                    <div class="form-input">
+                                        <label for="name">cost to pay</label>
                                         <input type="price" name="price" placeholder="price">
                                     </div>
+                                    <div class ="form-input">
+                                    <br> <label for="location">Choose a location:</label>  <br>
+                                    <select name="location" id="location">
+                                        <option >Bhilai</option>
+                                        <option >Durg</option>
+                                        <option >Raipur</option>
+                                        <option >Others</option>
+                                    </select>
+                                    </div><br>
                                     <div class="form-input">
                                         <label for="name">phone</label>
                                         <input type="phone" name="phone" placeholder="phone">
@@ -301,7 +325,7 @@
                     <div class="col-xl-12 ">
                         <div class="footer-copy-right text-center">
                             <p><!-- bottom line -->
-                              <script>document.write(new Date().getFullYear());</script> This WebSite is a college project by <i class="fa fa-heart" aria-hidden="true"> Group number- 21</i></br>
+                              <script>document.write(new Date().getFullYear());</script> This WebSite is a college project by <i class="fa fa-heart" aria-hidden="true"> Group number- 19</i></br>
                               <!-- bottom fields --></p>
                           </div>
                       </div>
