--- a/templates/profile.html
+++ b/templates/profile.html
@@ -48,7 +48,7 @@
                                                 <li><a href="#">Pages</a>
                                                     <ul class="submenu">
                                                         <li><a href="about">about</a></li>
-                                                        <li><a href="blog">Blog</a></li>
+                                                        <li><a href="frontpahe">Blog</a></li>
                                                     </ul>
                                                 </li>
                                                 <li><a href="login">Log in</a></li>
