--- a/templates/searchresult.html
+++ b/templates/searchresult.html
@@ -72,12 +72,12 @@
                                     <div class="main-menu d-none d-lg-block">
                                         <nav>
                                             <ul id="navigation">
-                                                <li><a href="#">Home</a></li>
+                                                <li><a href="/">Home</a></li>
                                                 <li><a href="joblist">Joblist</a></li>
                                                 <li><a href="#">Pages</a>
                                                     <ul class="submenu">
                                                         <li><a href="about">about</a></li>
-                                                        <li><a href="blog">Blog</a></li>
+                                                        <li><a href="frontpage">Blog</a></li>
                                                     </ul>
                                                 </li>
                                                 <!-- <li><a href="login">Log in</a></li> -->
@@ -113,15 +113,16 @@
         {% static "pics" as baseUrl %}
         <div style="margin-top: 80px;"></div>
         {% if alpost|length < 1 %}
-        <p style="padding: 20px;">no search result    <b>{{ query }}</b> for this keyword</p>
+        <p style="padding: 20px;" text-align:center>no search result    <b>{{ query }}</b> for this keyword</p>
         {% endif %}
         {%for alpost in alpost %}
         <div style="background-color:#f2f2f2;" >
-        <p style="padding-left:10px;">Name:{{alpost.name}}</p>
-        <P style="padding-left:10px;"><img src="{{alpost.img.url}}" alt=""></P>
-        <P style="padding-left:10px;">Price:{{alpost.price}}</P>
-        <p style="padding-left:10px;">Desc:{{alpost.desc}}</p>
-        <p style="padding-left: 10px;">Phone:{{alpost.phone}}</p>
+            <img src="{{alpost.img.url}}" alt="this is good boy" height="250" width="250">
+             Name:{{alpost.name}}
+        
+            Price:{{alpost.price}}
+            Desc:{{alpost.desc}}
+            Phone:{{alpost.phone}}
         </div>
         
         {% endfor %}
@@ -225,7 +226,7 @@
                     <div class="col-xl-12 ">
                         <div class="footer-copy-right text-center">
                             <p><!-- bottom line -->
-                              <script>document.write(new Date().getFullYear());</script> This WebSite is a college project by <i class="fa fa-heart" aria-hidden="true"> Group number- 21</i></br>
+                              <script>document.write(new Date().getFullYear());</script> This WebSite is a college project by <i class="fa fa-heart" aria-hidden="true"> Group number- 19</i></br>
                               <!-- bottom fields --></p>
                           </div>
                       </div>
